--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint . --fix",
     "preshow:dist": "npm run build",
-    "show:dist": "http-server dist"
+    "show:dist": "http-server dist",
+    "test": "jest"
   },
   "dependencies": {
     "core-js": "3"
@@ -29,6 +30,7 @@
     "html-loader": "^5.1.0",
     "html-server": "^0.1.1",
     "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.2",
     "prettier": "^3.5.1",
     "webpack": "^5.98.0",
